--- a/XEEnglish/ExpendCalss/Setting/Coupons/CouponsCell.xib
+++ b/XEEnglish/ExpendCalss/Setting/Coupons/CouponsCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14C2043" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14C1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
@@ -14,7 +14,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="coupons1.png" translatesAutoresizingMaskIntoConstraints="NO" id="rJx-rd-5af">
-                        <rect key="frame" x="10" y="5" width="80" height="80"/>
+                        <rect key="frame" x="47" y="16" width="55" height="60"/>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="密码:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xY9-Ds-AGv">
                         <rect key="frame" x="110" y="25" width="40" height="20"/>
@@ -61,12 +61,22 @@
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mQX-QN-VW8">
+                        <rect key="frame" x="0.0" y="30" width="39" height="40"/>
+                        <state key="normal" image="chekbox.png">
+                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                    </button>
                 </subviews>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="iconButton" destination="mQX-QN-VW8" id="QAr-XR-CkV"/>
+            </connections>
             <point key="canvasLocation" x="264" y="272"/>
         </tableViewCell>
     </objects>
     <resources>
+        <image name="chekbox.png" width="32" height="32"/>
         <image name="coupons1.png" width="400" height="400"/>
         <image name="couponstime.png" width="768" height="768"/>
     </resources>
