--- a/XEEnglish/ExpendCalss/Activity/ActivityCell.xib
+++ b/XEEnglish/ExpendCalss/Activity/ActivityCell.xib
@@ -38,7 +38,7 @@
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="DuI-dv-YhV">
                         <rect key="frame" x="264" y="5" width="46" height="25"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" red="1" green="0.42745098039215684" blue="0.24705882352941178" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="1" green="0.48263922009999999" blue="0.1546600128" alpha="1" colorSpace="calibratedRGB"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <state key="normal" title="预约">
                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -97,6 +97,7 @@
                 <outlet property="activitySchoolLabel" destination="kEZ-S2-nRg" id="sbo-L3-DgG"/>
                 <outlet property="activityTimeLabel" destination="i7e-IN-ULw" id="u1v-Oh-TRe"/>
                 <outlet property="activityTitleLabel" destination="Uev-eq-s3q" id="Nfd-Rd-AAx"/>
+                <outlet property="reserveBtn" destination="DuI-dv-YhV" id="dOL-pq-wKX"/>
             </connections>
             <point key="canvasLocation" x="561" y="339"/>
         </tableViewCell>
